[gd_scene load_steps=4 format=2]

[ext_resource path="res://message_theme.tres" type="Theme" id=1]
[ext_resource path="res://MessageBG1.png" type="Texture" id=2]
[ext_resource path="res://Message.gd" type="Script" id=3]

[node name="Message" type="Node2D" groups=[
"Message",
]]
script = ExtResource( 3 )

[node name="Background" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_top = 32.0
margin_right = 1248.0
margin_bottom = 568.0
texture = ExtResource( 2 )
patch_margin_left = 7
patch_margin_top = 9
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 352.0
margin_top = 64.0
margin_right = 1216.0
margin_bottom = 410.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="LblUserName" type="Label" parent="VBoxContainer"]
margin_right = 864.0
margin_bottom = 113.0
theme = ExtResource( 1 )
text = "John Doe
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblMessage" type="Label" parent="VBoxContainer"]
margin_top = 117.0
margin_right = 864.0
margin_bottom = 346.0
theme = ExtResource( 1 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque interdum rutrum sodales. Nullam mattis fermentum libero, non volutpat."
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 352.0
margin_top = 480.0
margin_right = 1103.0
margin_bottom = 535.0
custom_constants/separation = 50
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="LblViews" type="Label" parent="HBoxContainer"]
margin_right = 242.0
margin_bottom = 55.0
theme = ExtResource( 1 )
text = "Views: 88888	"

[node name="LblBoosts" type="Label" parent="HBoxContainer"]
margin_left = 292.0
margin_right = 508.0
margin_bottom = 55.0
theme = ExtResource( 1 )
text = "Boosts: 888"

[node name="LblRepeats" type="Label" parent="HBoxContainer"]
margin_left = 558.0
margin_right = 751.0
margin_bottom = 55.0
theme = ExtResource( 1 )
text = "Repeats: 8"
